feat : ignore yml 에 의한 삭제 및 mysql connector java 의존성 추가

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
+.yml
+*.yml
 .gradle
 build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
+
 
 ### IntelliJ IDEA ###
 .idea/modules.xml
